fixed some HTML

--- a/RU_Going/public/landing.html
+++ b/RU_Going/public/landing.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>A Penny Saved - Track Eating Out Expenses, Save Money</title>
-    <meta name="description" content="A quick and easy way to save money by tracking what you've spent on food throughout your day">
+    <title>RU GOING?</title>
+    <meta name="description" content="A quick and easy way to meetup with new friends in your area!">
     <link rel="apple-touch-icon" sizes="57x57" href="fav/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="fav/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="fav/apple-icon-72x72.png">
@@ -28,17 +28,17 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <link rel="stylesheet" href="animate.css">
     <link type="text/css" rel="stylesheet" href="./assets/css/materialize.min.css">
+    <link type="text/css" rel="stylesheet" href="./assets/css/landing.css">
 </script>
 </head>
 
 <body>
     <div id="body" class="intro z-depth-2">
-        <div id="title">
+        <div id="title" class="center-align">
             R.U. Going?
         </div>
         <div class="row">
-            <!--  <nav id="userbar"> -->
-            <!-- <div class="nav-wrapper"> -->
+
             <div class="row">
                 <form class="col s6 offset-s3">
                     <div class="input-field">
@@ -55,22 +55,24 @@
         </div>
         <!-- first set of buttons -->
         <br>
-        <a id="login" type="submit" class="waves-effect waves-light btn"><i class="material-icons left">input</i>LOGIN</a>
-        <a id="register" class="waves-effect waves-light btn"><i class="material-icons right">supervisor_account</i>REGISTER</a>
+        <div class="center-align">
+        <a id="login" type="submit" class=" red darken-2 center-align waves-effect waves-light btn"><i class="material-icons left">input</i>LOGIN</a>
+        <a id="register" class="red darken-2 center-align waves-effect waves-light btn"><i class="material-icons right">supervisor_account</i>REGISTER</a>
+        </div>
         <!-- second set of buttons -->
     </div>
     <div class="row" id="descriptionArea">
-        <H3> R.U. Going is Doap </H1>
+        <H1 class="center-align"> R.U. Going is Doap </H1>
         <div class="col s12 m4 l4">
-            <H5> Create an Event </H2> 
-               <i class="large material-icons">today</i>
+            <H2 class="center-align"> Create an Event </H2> 
+               <i class="center-align large material-icons">today</i>
         </div>   
          <div class="col s12 m4 l4">
-            <H5> Create and find meetups based on what you want to do, then meet new people that share similar interests. </H2>
+            <H5 class="center-align"> Create and find meetups based on what you want to do, then meet new people that share similar interests. </H2>
         </div>
         <div class="col s12 m4 l4">    
-            <H5> Meet Up </H2>
-           <i class="large material-icons">today</i>
+            <H2 class="center-align">Find Meet Up </H2>
+           <i class="center-align large material-icons">search</i>
         </div>
        
 
