--- a/RU_Going/public/form.html
+++ b/RU_Going/public/form.html
@@ -47,8 +47,8 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-          <label for="disabled">Colors</label>
+          <input placeholder="" id="colors" type="text" class="validate">
+          <label for="colors">Colors (HEX Codes)</label>
         </div>
       </div>
       <div class="row">
