--- a/RU_Going/public/form.html
+++ b/RU_Going/public/form.html
@@ -38,11 +38,11 @@
       <div class="row">
         <div class="input-field col s6">
           <input placeholder="" id="first_name" type="text" class="validate">
-          <label for="first_name">First Name</label>
+          <label for="first_name">School Name</label>
         </div>
         <div class="input-field col s6">
           <input id="last_name" type="text" class="validate">
-          <label for="last_name">Last Name</label>
+          <label for="last_name">Zip Code</label>
         </div>
       </div>
       <div class="row">
