--- a/RU_Going/public/form.html
+++ b/RU_Going/public/form.html
@@ -37,29 +37,29 @@
     <form class="col s12">
       <div class="row">
         <div class="input-field col s6">
-          <input placeholder="" id="first_name" type="text" class="validate">
+          <input placeholder="" id="first_name" name="school" type="text" class="validate">
           <label for="first_name">School Name</label>
         </div>
         <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
+          <input id="last_name" type="text" name="zip" class="validate">
           <label for="last_name">Zip Code</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input placeholder="" id="colors" type="text" class="validate">
+          <input placeholder="" id="colors" name="colors" type="text" class="validate">
           <label for="colors">Colors (HEX Codes)</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="password" type="password" class="validate">
+          <input id="password" type="password" name="password" class="validate">
           <label for="password">Password</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
+          <input id="email" type="email"  name="email" class="validate">
           <label for="email">Email</label>
         </div>
       </div>
