--- a/RU_Going/public/index.html
+++ b/RU_Going/public/index.html
@@ -13,11 +13,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- Stops user from being able to double-tap zoom -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>RU Going?</title>
+    <title>Meet-U-There</title>
 
     <!-- Resource CSS -->
      <link rel="stylesheet" href="libs/materialize/dist/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">-->
     <link rel="stylesheet" type="text/css" href="libs/animate.css/animate.min.css">
 
 
@@ -33,29 +33,37 @@
         <br>
         <br>
         <!-- R U Going Header -->
-        <h1 align="center" id="homeButton" class="animated slideInDown"><img src="assets/images/rutgers.png" height="auto" width="10%">U Going?</h1>
-        <span><div class="animated slideInDown" id="weather"></div></span>
+        <h1 align="center" id="homeButton" class="animated slideInDown"><b>Meet-U-There</b></h1>
+        <!--<span><div class="animated slideInDown" id="weather"></div></span>-->
         <br>
         <br>
-        <!-- MARIAH'S HTML ADDED -->
+      <br>
+      <br>
+      <br>
     </div>
     <!-- END MARIAH'S HTML ADDED -->
     <!-- Container for search or create prompt #findButton #createButton -->
     <div id="welcomeCenter" align="center">
-        <a href="#" class="btn btn-default btn-lg btn-block animated fadeInDown" id="findButton" data-toggle="modal" data-target="#findSection">Find a Hangout!</a>
+        
+        <a href="./school.html" class="waves-effect waves-light btn modal-trigger animated fadeInDown" id="findButton" >Find a Hangout!</a>
         <br>
         <br>
-        <a href="#" class="btn btn-default btn-lg btn-block animated fadeInDown" id="createButton" data-toggle="modal" data-target="#createSection">Create Your Own!</a>
+        <!--<a href="#" class="btn btn-default btn-lg btn-block animated fadeInDown" id="createButton" data-toggle="modal" data-target="#createSection">Create Your Own!</a>
         <br>
         <br>
         <!-- <img src="assets/images/welcome.png"> -->
         <div>
-            <a href="#" id="random" class="btn btn-default btn-lg btn-block animated fadeInDown">Random NB Deal!</a>
-            <div id="sqoot"></div>
+            <a href="#" id="random" class="btn btn-default btn-lg btn-block animated fadeInDown">Random NB Deal!</a>-->
+          <div id="sqoot"></div>
         </div>
     </div>
     <!-- Container for Create -->
     <!-- MODAL. USE THIS. -->
+
+
+
+
+
     <div id="createSection" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <!-- Modal content-->
@@ -125,13 +133,13 @@
         </div>
     </div>
     <!-- Container for Find -->
-    <div id="findSection" class="modal fade" role="dialog">
+   <!-- <div id="findSection" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <!-- Modal content-->
-            <div class="modal-content">
+            <!--<div class="modal-content">
                 <div class="modal-header">
                     <!-- <button type="button" id="close" class="close" data-dismiss="modal">&times;</button> -->
-                    <h4 class="modal-title animated fadeInDown" align="center">Find Your Event</h4>
+                  <!--  <h4 class="modal-title animated fadeInDown" align="center">Find Your Event</h4>
                 </div>
                 <div class="modal-body">
                     <label for="select" class="animated fadeInDown">Which campus would you like to visit?</label>
@@ -163,7 +171,7 @@
                     <button type="submit" id="findEvent" class="btn btn-default animated bounce">Find Event</button>
                     <br>
                     <br>
-                    <button type="button" class="close" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="close" class="btn btn-default" data-dismiss="modal">Close</button>-->
                     <!--             <button type="button" id="closeEvent" class="btn btn-default" data-dismiss="modal">Close</button>
        -->
                 </div>
@@ -172,12 +180,16 @@
     </div>
     <!-- ^Container for Find -->
     <!-- Container for event divs #eventDiv -->
+    
+ 
+
+
     <div id="eventDiv" class="animated slideInDown">
         <div class="row">
             <!-- CHAT GOES HERE. -->
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                    <div id="chat-container">
+                   <!--<div id="chat-container">
                         <header>RU Going? Chat</header>
                         <div id="menu">
                         </div>
@@ -189,7 +201,7 @@
                             <input type='text' id='messageInput' placeholder='Type a Message...'>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                     <div id="testdiv" class="animated fadeInDown">
                         <!-- Things show here -->
