--- a/RU_Going/public/index.html
+++ b/RU_Going/public/index.html
@@ -15,6 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Meet You There</title>
 
+    <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
+
     <!-- Resource CSS -->
      <link rel="stylesheet" href="libs/materialize/dist/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">
@@ -56,6 +58,7 @@
         <div class="center-align">
             <a id="login" type="submit" class=" red darken-2 center-align waves-effect waves-light btn"><i class="material-icons left">input</i>LOGIN</a>
             <a id="register" class="red darken-2 center-align waves-effect waves-light btn"><i class="material-icons right">supervisor_account</i>REGISTER</a>
+            
         </div>
 
     <!-- JS -->
@@ -72,3 +75,5 @@
 </body>
 
 </html>
+
+
