--- a/RU_Going/public/index.html
+++ b/RU_Going/public/index.html
@@ -15,16 +15,16 @@
     <title>Meet You There</title>
 
     <!-- Resource CSS -->
-    <link rel="stylesheet" href="libs/materialize/dist/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="libs/animate.css/animate.min.css">
+    <link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="/libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/libs/animate.css/animate.min.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-    
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 
