--- a/RU_Going/public/index.html
+++ b/RU_Going/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <base href="/">
 <head>
-    <!-- HTML Magic -->
+    <!-- HTML Magic -->/
     <meta charset="UTF-8">
     <!-- iPhone Optimization -->
     <!-- App Icon Image -->
@@ -103,11 +103,11 @@
     </div>
 </div>
 <!-- JS -->
-<script src="libs/jquery/dist/jquery.min.js"></script>
-<script src="libs/angular/angular.min.js"></script>
-<script src="libs/angular-route/angular-route.min.js"></script>
-<script src="libs/materialize/dist/js/materialize.min.js"></script>
-<script src="libs/angular-materialize/src/angular-materialize.js"></script>
+<script src="/libs/jquery/dist/jquery.min.js"></script>
+<script src="/libs/angular/angular.min.js"></script>
+<script src="/libs/angular-route/angular-route.min.js"></script>
+<script src="/libs/materialize/dist/js/materialize.min.js"></script>
+<script src="/libs/angular-materialize/src/angular-materialize.js"></script>
 
 <!-- Angular Files -->
 <script src="assets/javascript/app/appRoutes.js"></script>
