--- a/RU_Going/public/index.html
+++ b/RU_Going/public/index.html
@@ -110,9 +110,11 @@
 <script src="/libs/angular-materialize/src/angular-materialize.js"></script>
 
 <!-- Angular Files -->
-<script src="assets/javascript/app/appRoutes.js"></script>
-<script src="assets/javascript/app/app.js"></script>
-<script type="text/javascript">
+<script src="/assets/javascript/app/appRoutes.js"></script>
+<script src="/assets/javascript/app/app.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script type="text/javascript">
     $('.submit-form').on('click', function(){
         var email = $('.email-validate').val();
         console.log(email);
