--- a/RU_Going/public/school.html
+++ b/RU_Going/public/school.html
@@ -310,8 +310,10 @@ $.getJSON('/api/entries', function(data) {
 <!-- Angular Files -->
 <script src="/assets/javascript/app/app.js"></script>
 
-<script src="//assets/javascript/logic.js"></script>
-<script src="//assets/javascript/javascript.js"></script>
+<script src="/assets/javascript/logic.js"></script>
+<script src="/assets/javascript/javascript.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 </body>
 
 </html>
