--- a/RU_Going/public/index.html
+++ b/RU_Going/public/index.html
@@ -15,7 +15,7 @@
     <title>Meet You There</title>
 
     <!-- Resource CSS -->
-    <link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css">
+    <!--<link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css">-->
     <link rel="stylesheet" type="text/css" href="/libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/libs/animate.css/animate.min.css">
 
