--- a/RU_Going/public/school-2.html
+++ b/RU_Going/public/school-2.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
 
     <!-- Resource CSS -->
-    <link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css">
+    <!--<link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css">-->
     <link rel="stylesheet" type="text/css" href="/libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/libs/animate.css/animate.min.css">
 <!-- Compiled and minified CSS -->
@@ -334,10 +334,10 @@ $(document).ready(function(){
 
 
 
-<script src="/libs/angular/angular.min.js"></script>
-<script src="/libs/angular-route/angular-route.min.js"></script>
-<script src="/libs/jquery/dist/jquery.min.js"></script>
-<script src="/libs/materialize/dist/js/materialize.min.js"></script>
+<!--<script src="/libs/angular/angular.min.js"></script>-->
+<!--<script src="/libs/angular-route/angular-route.min.js"></script>-->
+<!--<script src="/libs/jquery/dist/jquery.min.js"></script>-->
+<!--<script src="/libs/materialize/dist/js/materialize.min.js"></script>-->
 
 <!-- Angular Files -->
 <script src="/assets/javascript/app/app.js"></script>
