Revert to previous commit

--- a/RU_Going/public/school.html
+++ b/RU_Going/public/school.html
@@ -17,9 +17,9 @@
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
 
     <!-- Resource CSS -->
-    <!--<link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css">-->
-    <link rel="stylesheet" type="text/css" href="/libs/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/libs/animate.css/animate.min.css">
+    <link rel="stylesheet" href="libs/materialize/dist/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/animate.css/animate.min.css">
 <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
@@ -115,7 +115,7 @@
 
 
                     <div class="col s12 m9 ">
-                        <div class="card large" style="float:left/;"id="twitter">
+                        <div class="card large" style="float:left;"id="twitter">
                        
                             <!-- <h4>See What's Making News</h4> -->
                             <a class="twitter-timeline" href="https://twitter.com/hashtag/RU_Going" data-widget-id="710949422897692672">#RU_Going</a>
@@ -302,18 +302,16 @@ $.getJSON('/api/entries', function(data) {
 
 
 
-<!--<script src="/libs/angular/angular.min.js"></script>-->
-<!--<script src="/libs/angular-route/angular-route.min.js"></script>-->
-<!--<script src="/libs/jquery/dist/jquery.min.js"></script>-->
-<!--<script src="/libs/materialize/dist/js/materialize.min.js"></script>-->
+<script src="libs/angular/angular.min.js"></script>
+<script src="libs/angular-route/angular-route.min.js"></script>
+<script src="libs/jquery/dist/jquery.min.js"></script>
+<script src="libs/materialize/dist/js/materialize.min.js"></script>
 
 <!-- Angular Files -->
-<script src="/assets/javascript/app/app.js"></script>
+<script src="assets/javascript/app/app.js"></script>
 
-<script src="/assets/javascript/logic.js"></script>
-<script src="/assets/javascript/javascript.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+<script src="assets/javascript/logic.js"></script>
+<script src="assets/javascript/javascript.js"></script>
 </body>
 
 </html>
