--- a/RU_Going/public/index.html
+++ b/RU_Going/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <base href="/">
 <head>
-    <!-- HTML Magic -->/
+    <!-- HTML Magic -->
     <meta charset="UTF-8">
     <!-- iPhone Optimization -->
     <!-- App Icon Image -->
@@ -15,15 +15,10 @@
     <title>Meet You There</title>
 
     <!-- Resource CSS -->
-    <!--<link rel="stylesheet" href="/libs/materialize/dist/css/materialize.min.css">-->
-    <link rel="stylesheet" type="text/css" href="/libs/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/libs/animate.css/animate.min.css">
+    <link rel="stylesheet" href="libs/materialize/dist/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="libs/animate.css/animate.min.css">
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -111,18 +106,16 @@
     </div>
 </div>
 <!-- JS -->
-<script src="/libs/jquery/dist/jquery.min.js"></script>
-<script src="/libs/angular/angular.min.js"></script>
-<script src="/libs/angular-route/angular-route.min.js"></script>
-<script src="/libs/materialize/dist/js/materialize.min.js"></script>
-<script src="/libs/angular-materialize/src/angular-materialize.js"></script>
+<script src="libs/jquery/dist/jquery.min.js"></script>
+<script src="libs/angular/angular.min.js"></script>
+<script src="libs/angular-route/angular-route.min.js"></script>
+<script src="libs/materialize/dist/js/materialize.min.js"></script>
+<script src="libs/angular-materialize/src/angular-materialize.js"></script>
 
 <!-- Angular Files -->
-<script src="/assets/javascript/app/appRoutes.js"></script>
-<script src="/assets/javascript/app/app.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-    <script type="text/javascript">
+<script src="assets/javascript/app/appRoutes.js"></script>
+<script src="assets/javascript/app/app.js"></script>
+<script type="text/javascript">
     $('.submit-form').on('click', function(){
         var email = $('.email-validate').val();
         console.log(email);
